horizontal scroll fix

--- a/css/style.css
+++ b/css/style.css
@@ -175,8 +175,8 @@ img {
   position: absolute;
   background-color: white;
   top: -3.875rem;
-  left: -4.4375rem;
-  right: -4.4375rem;
+  left: -3.4375rem;
+  right: -3.4375rem;
   display: flex;
   justify-content: space-between;
   padding: 3.875rem 3.1875rem;
